terminado sin estilos

--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
 
     <title>DOJO PROJECT</title>
   </head>
-  <body
-    id="contenido"
-    onload="menu(); mostrarData(); construirForm();"
-    class="claro"
-  >
+  <body id="contenido" onload="menu(); mostrarData();" class="claro">
     <h1>THE PROJECT DOJO</h1>
     <div id="menu"></div>
     <div id="users" styles=" width: 560px;height: 500px;"></div>
