--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
         height: 40em;
       }
     </style>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap"
+      rel="stylesheet"
+    />
     <!---------------------------------js imports---------------------------------------------->
 
     <script>
@@ -59,9 +73,9 @@
     <title>DOJO PROJECT</title>
   </head>
   <body id="contenido" onload="menu(); mostrarData();" class="claro">
-    <h1>THE PROJECT DOJO</h1>
+    <h1 id="title">DOJO PROJECT</h1>
     <div id="menu"></div>
-    <div id="users" styles=" width: 560px;height: 500px;"></div>
-    <div id="products" styles=" width: 560px;height: 500px;"></div>
+    <div id="users"></div>
+    <div id="products"></div>
   </body>
 </html>
